--- a/index.html
+++ b/index.html
@@ -22,17 +22,21 @@
 		<div class="container">
 			<h1 class="text-center">Giffaw</h1>
 			<div class="row">
-				<div class="col-sm-4">
-					<form class="form-inline">
-						<label>Search Gifs</label>
-						<input type="text" class="form-control gif-input" name="q" value="cats" placeholder="search gifs">
-						<input type="hidden" name="api_key" value="dc6zaTOxFJmzC">
-						<input type="submit" value="Go!" class="btn btn-primary">
-					</form>
-				</div>
+					<div class="col-sm-4">
+						<form class="form-inline">
+							<label>Search Gifs</label>
+							<input type="text" class="form-control gif-input" name="q" value="" placeholder="search gifs">
+							<input type="hidden" name="api_key" value="dc6zaTOxFJmzC">
+							<input type="submit" value="Go!" class="btn btn-primary" id="submit">
+						</form>
+					<div class="col-sm-4 gifs">
+					</div  >
+					</div>
 				<div class="col-sm-8">
 					<div class="gif-gallery"></div>
 				</div>
+					<form class="loadmore">
+						<input type = "submit" value="Moar!" class="btn btn-primary" id="more">
 			</div>
 		</div>
 	</body>
